# ToolUniverse

./: .env.template  .gitattributes  .gitignore  README.md  pyproject.toml  server.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: known_failing_categories.txt
.github/workflows/: auto-release.yml  publish-pypi.yml  release-plugin.yml  sync-api-keys.yml  weekly-tool-healthcheck.yml
docs/: MCP_TASKS_GUIDE.md  conf.py  index.rst  sitemap.rst
docs/about/: deployment.rst
docs/api/: modules.rst  tooluniverse.rst
docs/expand_tooluniverse/: architecture.rst  index.rst  quick_start.rst
docs/guide/: agentic_tools_tutorial.rst  api_keys.rst  cache_system.rst  clinical_guidelines_tools.rst  euhealth_tools_tutorial.rst  finding_tools.rst  http_api.rst  interaction_protocol.rst  literature_search_tools_tutorial.rst  literature_search_web_ui_tutorial.rst  loading_tools.rst  logging.rst  make_your_data_agent_searchable.rst  python_guide.rst  tool_caller.rst  tool_composition.rst  tools.rst
docs/help/: faq.rst  index.rst  troubleshooting.rst
mcpb/: README.md  build.sh  manifest.json  pyproject.toml
mcpb/src/: run_stdio.py
plugin/: .mcp.json  CHANGELOG.md  README.md  settings.json  sync-skills.sh
scripts/: RELEASING.md  audit_empty_success.py  build-codex-plugin.sh  build-plugin.sh  gen_api_key_catalog.py  release-plugin.sh  sync-codex-plugin-skills.sh  test_all_tools.py  test_new_tools.py
skills/: README.md
tests/: conftest.py  test_aging_cohort_tool.py  test_claude_code_plugin.py  test_executed_notebook_tool.py
(+1442 files in other folders)
